Add wait section

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,12 @@
 
 /*call-back*/
 .call-back {
-	padding: 100px 0;	
+	padding: 100px 0;
+	background-image: url("../img/bg-snow-belaz.png");
+	-webkit-background-size: contain;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .call-back-container {
 	display: flex;
@@ -164,9 +169,11 @@
 	width: 100%;
 }
 .call-back-form {
-	/*align-self: flex-end;*/
+	display: flex;
+	flex-direction: column;
 }
 .call-back-heading {
+	align-self: flex-end;
 	width: 440px;
 	font-size: 30px;
 	text-align: right;
@@ -175,6 +182,104 @@
 	display: flex;
 }
 .input-wrapper {
+	position: relative;
 	width: 370px;
+	padding: 30px;
+	padding-right: 60px;
 	background-color: #f2f2f2;
+}
+	.input-wrapper-envelope::after {
+		content: "";
+		position: absolute;
+		display: inline-block;
+		right: 30px;
+		width: 20px;
+		height: 20px;
+		background-image: url("../img/envelope.png");
+		background-repeat: no-repeat;
+		background-position: center;
+		-webkit-background-size: contain;
+		background-size: contain;
+	}
+	.input-wrapper-call::after {
+		content: "";
+		position: absolute;
+		display: inline-block;
+		right: 30px;
+		width: 20px;
+		height: 20px;
+		background-image: url("../img/call-answer.png");
+		background-repeat: no-repeat;
+		background-position: center;
+		-webkit-background-size: contain;
+		background-size: contain;	
+	}
+.input-wrapper:first-child {
+	margin-right: 30px;
+}
+.call-back-input {
+	width: 100%;
+	background-color: transparent;
+	border: none;
+}
+.form-buttons {
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 30px;
+}
+.button-text {
+	width: 185px;
+	margin-right: 30px;
+	font-size: 14px;
+	font-weight: 700;
+	text-align: right;
+}
+.call-back-button {
+	width: 370px;
+	font-size: 17px;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #ffffff;
+	border: none;
+	background-color: #1866af;
+	cursor: pointer;
+}
+
+/*wait*/
+.wait {
+	padding: 100px 0;
+	color: #ffffff;
+	background-color: #08243e;
+}
+.wait-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;	
+}
+.wait-heading {
+	margin: 0;
+	font-size: 36px;
+}
+.wait-text {
+	margin-top: 30px;
+	margin-bottom: 100px;
+	font-size: 20px;
+	text-align: center;
+}
+.wait-list {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+.wait-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 200px;
+	margin-right: 100px;
+	text-align: center;
+}
+.wait-item:last-child {
+	margin: 0;
 }
