--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,178 @@
 		background-size: contain;
 		background-position: center;
 	}
+
+/*comf*/
+.comf {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 100px 0;
+}
+.comf-heading {
+	width: 820px;
+	margin: 0;
+	font-size: 36px;
+	text-align: center;
+}
+.comf-text {
+	font-size: 20px;
+}
+.comf-list {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	margin-top: 100px;
+	list-style-type: none;
+}
+.comf-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 210px;
+	text-align: center;
+}
+	.comf-first::before {
+		content: "";
+		width: 88px;
+		height: 88px;
+		margin-bottom: 50px;
+		background-image: url("../img/com-dollar.png");
+		background-position: center;
+		-webkit-background-size: contain;
+		background-size: contain;
+		background-repeat: no-repeat;
+	}
+	.comf-second::before {
+		content: "";
+		width: 88px;
+		height: 88px;
+		margin-bottom: 50px;
+		background-image: url("../img/com-time.png");
+		background-position: center;
+		-webkit-background-size: contain;
+		background-size: contain;
+		background-repeat: no-repeat;
+	}
+	.comf-third::before {
+		content: "";
+		width: 88px;
+		height: 88px;
+		margin-bottom: 50px;
+		background-image: url("../img/com-list.png");
+		background-position: center;
+		-webkit-background-size: contain;
+		background-size: contain;
+		background-repeat: no-repeat;
+	}
+
+/*sklad*/
+.sklad {
+	color: #ffffff;
+	background-color: #0b3554;
+}
+	.comf-first-service::before {
+		content: "";
+		width: 170px;
+		height: 170px;
+		margin-bottom: 50px;
+		background-image: url("../img/mob-delivery.png");
+		background-position: center;
+		-webkit-background-size: 70px 57px;
+		background-size: 70px 57px;
+		background-repeat: no-repeat;
+		border: 5px solid #ffbc3b;
+		border-radius: 50%;
+	}
+	.comf-second-service::before {
+		content: "";
+		width: 170px;
+		height: 170px;
+		margin-bottom: 50px;
+		background-image: url("../img/mob-toolbox.png");
+		background-position: center;
+		-webkit-background-size: 70px 57px;
+		background-size: 70px 57px;
+		background-repeat: no-repeat;
+		border: 5px solid #ffbc3b;
+		border-radius: 50%;
+	}
+	.comf-third-service::before {
+		content: "";
+		width: 170px;
+		height: 170px;
+		margin-bottom: 50px;
+		background-image: url("../img/mob-certificate.png");
+		background-position: center;
+		-webkit-background-size: 77px 57px;
+		background-size: 77px 57px;
+		background-repeat: no-repeat;
+		border: 5px solid #ffbc3b;
+		border-radius: 50%;
+	}
+
+/*coal-order*/
+.coal-order {
+	background-color: #0d324d;
+	background-image: url("../img/coal-belaz.png");
+	background-repeat: no-repeat;
+	-webkit-background-size: 480px 286px;
+	background-size: 480px 286px;
+	background-position: right bottom;
+}
+.coal-heading,
+.coal-tel {
+	margin-bottom: 60px;
+}
+
+/*telephone-order*/
+.telephone-order {
+	background-color: #ffffff;
+	background-image: url("../img/bg-two-belaz.png");
+	-webkit-background-size: contain;
+	background-size: contain;
+	background-position: center;
+}
+.telephone-heading,
+.telephone-tel-text,
+.telephone-tel {
+	color: #000000;
+}
+.telephone-heading {
+	margin-bottom: 100px;
+}
+.belaz-map {
+}
+.belaz-map-img {
+	margin: 0 auto;
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+.belaz-map-link {
+	display: block;
+}
+
+/*footer*/
+.site-footer {
+	padding: 40px 0;
+	color: #ffffff;
+	background-color: #191919;
+}
+.footer-container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.footer-text {
+	margin: 0;
+	margin-bottom: 13px;
+}
+.footer-tel {
+	font-size: 18px;
+	font-weight: 700;
+	color: #ffffff;
+	text-decoration: none;
+}
